add dimension when print function prints to console